Fix Action column flicker (flex on div wrapper, not td) and comment icon color

--- a/style.css
+++ b/style.css
@@ -327,6 +327,8 @@ tbody td:nth-child(11) {
   width: 80px;
   text-align: center;
   background: #fff;
+}
+.action-inner {
   display: flex;
   align-items: center;
   justify-content: center;
